2011-03-24  Dietmar Warning
 * xspice/icm/GNUmakefile.in: sun cc needs modified dependency flags (-xMD)

2011-03-18  Dietmar Warning
 * frontend/typedefs.c, outitf.c: bug no. 3214252 fixed

2011-03-16 Dietmar Warning
 * plotit.c: fix the wrong x-axis label for temp-sweep and res-sweep by 
   using macros SV_XXX for vector types

2011-03-13 Dietmar Warning
 * analysis.h, typedefs.h, misc. bXtemp.c: skip printout in bsimtemp for 
   sens analysis
 * bsim2/bsim2def.h: int for XPARTS flag in ancient debug usage

2011-03-10 Dietmar Warning
 * src/spicelib/devices/bjt: nkf additional beta rolloff exponent parameter

2011-03-07  Holger Vogt
 * inpcom.c: bug no. 3201331 fixed

2011-03-04  Robert Larice
 * src/spicelib/devices/isrc/isrcdefs.h :
    bug fix, isrc polarity inversion
      my commit `vsrc, isrc, cleanup aiming for more similarity' from 2011-02-27
        changed the polarity of the `isrc' current.
      the structure definition somewhere has an `overlay', how *evil* !

2011-03-03 Dietmar Warning
 * diode & bjt temperature model update tlev, tlevc
 * cktsgen.c: segfault fix

2011-02-28  Robert Larice
 * src/spicelib/devices/isrc/isrcacct.c ,
 * src/spicelib/devices/isrc/isrcload.c :
    merge vsrc PULSE -> isrc
      to fix PHASE != 0,  see commit from  2010-11-21

2011-02-28  Robert Larice
 * src/spicelib/devices/isrc/isrc.c ,
 * src/spicelib/devices/isrc/isrcacct.c ,
 * src/spicelib/devices/isrc/isrcask.c ,
 * src/spicelib/devices/isrc/isrcdefs.h ,
 * src/spicelib/devices/isrc/isrcload.c ,
 * src/spicelib/devices/isrc/isrcpar.c ,
 * src/spicelib/devices/vsrc/vsrc.c ,
 * src/spicelib/devices/vsrc/vsrcload.c :
    merge TRRANDOM vsrc -> isrc
      see commit from 11-01-16

2011-02-27  Robert Larice
 * src/spicelib/devices/isrc/* ,
 * src/spicelib/devices/vsrc/* :
    vsrc, isrc, whitespace cleanup

2011-02-27  Robert Larice
 * src/spicelib/devices/isrc/* ,
 * src/spicelib/devices/vsrc/* :
    vsrc, isrc, cleanup aiming for more similarity
