@@ -1,3 +1,10 @@
+2011-04-02  Robert Larice
+ * src/frontend/plotting/x11.c :
+   extend the fix from 2011-02-11
+     for other ways of closing a plot window.
+   in response to
+     http://sourceforge.net/tracker/?func=detail&atid=423915&aid=3263437&group_id=38962
+
 2011-03-24  Dietmar Warning
  * xspice/icm/GNUmakefile.in: sun cc needs modified dependency flags (-xMD)
 
